--- a/assets/css/calculadora-de-viajes.css
+++ b/assets/css/calculadora-de-viajes.css
@@ -18,5 +18,10 @@
 .subhead {
 	/* text-transform: none; */
 	letter-spacing: 0.187rem;
+	margin: 0 0 2em 0;
 	margin-top: 1.4rem;
+	margin-bottom: .5rem;
+	font-size: 1rem !important;
+	font-weight: 500;
+	font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
