--- a/assets/css/calculadora-de-viajes.css
+++ b/assets/css/calculadora-de-viajes.css
@@ -25,3 +25,9 @@
 	font-weight: 500;
 	font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+table {
+	color: #112;
+	/* font-size: 16px; */
+	/* font-weight: 400; */
+}
