--- a/assets/css/calculadora-de-viajes.css
+++ b/assets/css/calculadora-de-viajes.css
@@ -18,9 +18,9 @@
 .subhead {
 	/* text-transform: none; */
 	letter-spacing: 0.187rem;
-	margin: 0 0 2em 0;
+	/* margin: 0 0 2em 0; */
 	margin-top: 1.4rem;
-	margin-bottom: .5rem;
+	margin-bottom: .25rem;
 	font-size: 1rem !important;
 	font-weight: 500;
 	font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -30,4 +30,19 @@ table {
 	color: #112;
 	/* font-size: 16px; */
 	/* font-weight: 400; */
+}
+
+.horizontal-div {
+	display: flex;
+	flex-direction: row;
+	gap: 20em;
+
+	margin-top: 1.8em;
+	margin-bottom: 2em;
+}
+
+.checklist-container,
+.checklist {
+	display: flex;
+	flex-direction: column;
 }
