--- a/assets/css/calculadora-de-viajes.css
+++ b/assets/css/calculadora-de-viajes.css
@@ -46,3 +46,10 @@ table {
 	display: flex;
 	flex-direction: column;
 }
+
+@media (max-width: 600px) {
+	.horizontal-div {
+		flex-direction: column !important;
+		gap: 2em;
+	}
+}
